--- a/TropicalDiseaseResearch/build.gradle
+++ b/TropicalDiseaseResearch/build.gradle
@@ -1,3 +1,6 @@
+def SpringVersion = '4.0.1.RELEASE'
+def JettyVersion = '8.1.14.v20131031'
+
 group 'team.t9001.saad'
 version '1.0-SNAPSHOT'
 
@@ -8,10 +11,20 @@ apply plugin: 'eclipse'
 sourceCompatibility = 1.7
 
 repositories {
+    maven { url "http://maven.aliyun.com/nexus/content/repositories/central/"}
     mavenCentral()
 }
 
 dependencies {
     compile 'org.apache.commons:commons-lang3:3.1'
+    compile 'com.google.guava:guava:15.0'
+    compile 'com.alibaba:fastjson:1.1.41'
+    compile 'mysql:mysql-connector-java:5.1.26'
+    compile "org.springframework:spring-context:${SpringVersion}"
+    compile "org.springframework:spring-jdbc:${SpringVersion}"
+    compile "org.springframework:spring-web:${SpringVersion}"
+    compile "org.springframework:spring-test:${SpringVersion}"
+    compile "org.springframework:spring-webmvc:${SpringVersion}"
+    compile "org.eclipse.jetty:jetty-jsp:${JettyVersion}"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
