--- a/TropicalDiseaseResearch/build.gradle
+++ b/TropicalDiseaseResearch/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 
-sourceCompatibility = 1.7
+sourceCompatibility = 1.8
 
 repositories {
     maven { url "http://maven.aliyun.com/nexus/content/repositories/central/"}
@@ -25,6 +25,14 @@ dependencies {
     compile "org.springframework:spring-web:${SpringVersion}"
     compile "org.springframework:spring-test:${SpringVersion}"
     compile "org.springframework:spring-webmvc:${SpringVersion}"
+    compile "org.eclipse.jetty:jetty-servlet:${JettyVersion}"
+    compile "org.eclipse.jetty:jetty-webapp:${JettyVersion}"
     compile "org.eclipse.jetty:jetty-jsp:${JettyVersion}"
+    compile 'junit:junit:4.11'
+    compile 'com.alibaba:druid:1.0.9'
+    compile 'org.slf4j:slf4j-api:1.7.5'
+    compile 'org.apache.httpcomponents:httpclient:4.3.4'
+    compile 'ch.qos.logback:logback-core:1.0.13'
+    compile 'ch.qos.logback:logback-classic:1.0.13'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
