--- a/tropical-disease-research/pom.xml
+++ b/tropical-disease-research/pom.xml
@@ -59,7 +59,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.7</version>
         </dependency>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.26</version>
+        </dependency>
     </dependencies>
 
     <build>
