--- a/tropical-disease-research/pom.xml
+++ b/tropical-disease-research/pom.xml
@@ -64,6 +64,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.26</version>
         </dependency>
+        
+        <!-- fastJSON by lifeihu-->
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.5</version>
+		</dependency>
     </dependencies>
 
     <build>
@@ -90,4 +97,14 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>  
+    <repository>  
+        <id>offical</id>  
+        <name>Maven Official Repository</name>  
+        <url>http://maven.aliyun.com/nexus/content/groups/public/</url>  
+        <snapshots>  
+            <enabled>false</enabled>  
+        </snapshots>  
+    </repository>
+	</repositories>  
 </project>
