--- a/tropical-disease-research/pom.xml
+++ b/tropical-disease-research/pom.xml
@@ -5,8 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pers.ethan.springmvc</groupId>
-    <artifactId>spring-mvc</artifactId>
+    <artifactId>tropical-disease-research</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
@@ -107,6 +109,14 @@
                         <version>8.1.14.v20131031</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <warName>${project.artifactId}</warName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
